Add chapter drawer navigation
